--- a/style.css
+++ b/style.css
@@ -35,14 +35,14 @@ body {
 
 video {
   border-radius: 5px;
-
+  width: 100%;
+  height: auto;
 }
 
 /* Containers */
 .show-controls {
   width: 100%;
   height: 30%;
-  background: dodgerblue;
   z-index: 2;
   position: absolute;
   bottom: 0;
@@ -60,9 +60,13 @@ video {
   z-index: 5;
   display: flex;
   justify-content: space-between;
-
+  opacity: 0;
+  transition: all 0.5s ease-out 2s;
 }
-
+.show-controls:hover .controls-container{
+  opacity: 1;
+  transition: all 0.2s ease-out;
+}
 
 
 .control-group {
@@ -83,14 +87,19 @@ video {
 
 /* Progress Bar */
 .progress-range {
-
+  height: 8px;
+  width: calc(100% - 30px);
+  background: rgba(202, 202, 202, 0.5);
   margin: auto;
   border-radius: 10px;
   position: absolute;
   left: 15px;
   top: 15px;
   cursor: pointer;
-
+  transition: height 0.1s ease-in-out;
+}
+.progress-range:hover{
+  height: 10px;
 }
 
 
@@ -165,11 +174,14 @@ video {
 .speed {
   margin-right: 15px;
 }
-
+select,
+option{
+  cursor: pointer;
+}
 
 
 select {
-
+  background: transparent;
   color: var(--font-color);
   border: none;
   font-size: 18px;
@@ -177,7 +189,9 @@ select {
   top: -2.5px;
   border-radius: 5px;
 }
-
+select:focus{
+  outline: none;
+}
 
 
 select > option {
@@ -207,7 +221,10 @@ select > option {
 
 /* Media Query: Large Smartphone (Vertical) */
 @media screen and (max-width: 600px) {
-
+  .player{
+    min-width: 0;
+    max-width: 95%;
+  }
 
   .fas {
     font-size: 20px;
